--- a/units/readme
+++ b/units/readme
@@ -4,3 +4,5 @@ Notes/ToDo:
 -tweak stats
 -add more monsters
 -fix luk and speed
+
+please delete the Thumb.db files. They have no impact to this project
